--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,66 +1,30 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>IdeaKeeper</title>
+	<title>Login form</title>
 	<link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
 
-<div class="header">
-	<input type="text" id="searchKey"/>
-	<button id="btnSearch">Search</button>
-	<button id="btnAdd">New User</button>
-</div>
-
-
-<div class="leftArea">
-	<label><h1>All Users:</h1></label>
-	<ul id="userList"></ul>
-</div>
-
-<form id="userForm">
+<form id="loginForm">
 
 	<div class="mainArea">
 
-		<label><name>Id:</name></label>
-		<input id="userId" name="userId" type="text" disabled />
-
-		<label><name>Login:</name></label>
+		<label>Login:</label>
 		<input type="text" id="login" name="login" required>
 
-		<label><name>Password:</name></label>
+		<label>Password:</label>
 		<input type="text" id="password" name="password" required>
 
-		<label><name>Name:</name></label>
-		<input type="text" id="name" name="name"/>
+		<button id="btnLogIn">Login</button>
 
-		<label><name>Surname:</name></label>
-		<input type="text" id="surname" name="surname"/>
-
-		<label><name>E-mail:</name></label>
-		<input type="text" id="email" name="email"/>
-
-		<label><name>Access level:</name></label>
-		<input type="text" id="accessLevel" name="accessLevel"/>
-
-		<button id="btnSave">Save</button>
-		<button id="btnDelete">Delete</button>
-
-	</div>
-
-	<div class="rightArea">
-
-		<img id="pic" height="250"/>
-
-		<label><h1>User's Ideas:</h1></label>
-		<ul id="ideasList" name="ideasList"></ul>
 	</div>
 
 </form>
 
 <script src="js/jquery-1.7.1.min.js"></script>
-<script src="js/main.js"></script>
+<script src="js/index.js"></script>
 
 </body>
 </html>
