Authentication filter modified + cosmetics

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -23,25 +23,25 @@
 
 	<div class="mainArea">
 
-		<label><name>Id:</name></label>
+		<label>Id:></label>
 		<input id="userId" name="userId" type="text" disabled />
 
-		<label><name>Login:</name></label>
+		<label>Login:</label>
 		<input type="text" id="login" name="login" required>
 
-		<label><name>Password:</name></label>
+		<label>Password:</label>
 		<input type="text" id="password" name="password" required>
 
-		<label><name>Name:</name></label>
+		<label>Name:</label>
 		<input type="text" id="name" name="name"/>
 
-		<label><name>Surname:</name></label>
+		<label>Surname:</label>
 		<input type="text" id="surname" name="surname"/>
 
-		<label><name>E-mail:</name></label>
+		<label>E-mail:</label>
 		<input type="text" id="email" name="email"/>
 
-		<label><name>Access level:</name></label>
+		<label>Access level:</label>
 		<input type="text" id="accessLevel" name="accessLevel"/>
 
 		<button id="btnSave">Save</button>
