--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 		<input type="text" id="login" name="login" required>
 
 		<label>Password:</label>
-		<input type="text" id="password" name="password" required>
+		<input type="password" id="password" name="password" required>
 
 		<button id="btnLogIn">Login</button>
 
