--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -23,7 +23,7 @@
 
 	<div class="mainArea">
 
-		<label>Id:></label>
+		<label>Id:</label>
 		<input id="userId" name="userId" type="text" disabled />
 
 		<label>Login:</label>
@@ -46,6 +46,7 @@
 
 		<button id="btnSave">Save</button>
 		<button id="btnDelete">Delete</button>
+		<button id="btnEdit" onclick="location.href = 'http://localhost:8080/index.faces'">Edit</button>
 
 	</div>
 
