--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -46,7 +46,7 @@
 
 		<button id="btnSave">Save</button>
 		<button id="btnDelete">Delete</button>
-		<button id="btnEdit" onclick="location.href = 'http://localhost:8080/index.faces'">Edit</button>
+		<button id="btnEdit">Edit</button>
 
 	</div>
 
