--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -10,7 +10,7 @@
 <div class="header">
 	<input type="text" id="searchKey"/>
 	<button id="btnSearch">Search</button>
-	<button id="btnAdd">New User</button>
+	<button id="btnAdd">Clean Form</button>
 </div>
 
 
@@ -27,24 +27,23 @@
 		<input id="userId" name="userId" type="text" disabled />
 
 		<label>Login:</label>
-		<input type="text" id="login" name="login" required>
+		<input type="text" id="login" name="login" disabled />
 
 		<label>Password:</label>
-		<input type="text" id="password" name="password" required>
+		<input type="text" id="password" name="password" disabled />
 
 		<label>Name:</label>
-		<input type="text" id="name" name="name"/>
+		<input type="text" id="name" name="name" disabled/>
 
 		<label>Surname:</label>
-		<input type="text" id="surname" name="surname"/>
+		<input type="text" id="surname" name="surname" disabled/>
 
 		<label>E-mail:</label>
-		<input type="text" id="email" name="email"/>
+		<input type="text" id="email" name="email" disabled/>
 
 		<label>Access level:</label>
-		<input type="text" id="accessLevel" name="accessLevel"/>
+		<input type="text" id="accessLevel" name="accessLevel" disabled/>
 
-		<button id="btnSave">Save</button>
 		<button id="btnDelete">Delete</button>
 		<button id="btnEdit">Edit</button>
 
