--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -11,6 +11,8 @@
 	<input type="text" id="searchKey"/>
 	<button id="btnSearch">Search</button>
 	<button id="btnAdd">Clean Form</button>
+	<button id="btnLogout" style="float: right">Log out</button>
+
 </div>
 
 
@@ -50,7 +52,6 @@
 	</div>
 
 	<div class="rightArea">
-
 		<img id="pic" height="250"/>
 
 		<label><h1>User's Ideas:</h1></label>
